--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@cyb/zustand",
-  "version": "0.0.1",
+  "name": "cyb-zustand",
+  "version": "0.1.3-dev.1",
   "description": "",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,13 +10,15 @@
   "keywords": [],
   "author": "ice",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "react": "~19.0.0-rc.0",
     "react-dom": "~19.0.0-rc.0"
   },
-  "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0"
+  "peerDependencies": {
+    "react": "~19.0.0-rc.0",
+    "react-dom": "~19.0.0-rc.0"
   },
   "engines": {
     "node": ">=16.0.0",
