--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "cyb-zustand",
-  "version": "0.1.3-dev.1",
+  "version": "0.2.5",
   "description": "",
-  "main": "./lib/index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf dist && tsup",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [],
   "author": "ice",
@@ -14,7 +16,9 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "react": "~19.0.0-rc.0",
-    "react-dom": "~19.0.0-rc.0"
+    "react-dom": "~19.0.0-rc.0",
+    "tsup": "^8.1.0",
+    "typescript": "^5.5.3"
   },
   "peerDependencies": {
     "react": "~19.0.0-rc.0",
