--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cyb-zustand",
-  "version": "0.2.5",
+  "version": "0.2.6-dev.3",
   "description": "",
   "main": "dist/index.js",
   "type": "module",
@@ -13,16 +13,16 @@
   "author": "ice",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "react": "~19.0.0-rc.0",
-    "react-dom": "~19.0.0-rc.0",
+    "@types/react": "^19.0.3",
+    "@types/react-dom": "^19.0.2",
+    "react": "~19.0.0",
+    "react-dom": "~19.0.0",
     "tsup": "^8.1.0",
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "react": "~19.0.0-rc.0",
-    "react-dom": "~19.0.0-rc.0"
+    "react": "~19.0.0",
+    "react-dom": "~19.0.0"
   },
   "engines": {
     "node": ">=16.0.0",
