--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cyb-zustand",
-  "version": "0.2.6-dev.3",
+  "version": "0.2.6",
   "description": "",
   "main": "dist/index.js",
   "type": "module",
